fix bug that made modals not scrolling on firefox

--- a/Bundle/UIBundle/Resources/stylesheets/front/components/modal/includes/_statements.scss
+++ b/Bundle/UIBundle/Resources/stylesheets/front/components/modal/includes/_statements.scss
@@ -39,11 +39,17 @@ $modal-body--selector: selector--set-element($modal--selector, 'body');
 $modal-content--selector: selector--set-element($modal--selector, 'content');
 @include selector($modal-content--selector) {
   @include declaration('overflow-y', auto);
-  @include declaration('padding-top', $modals-content--padding-y);
-  @include declaration('padding-bottom', $modals-content--padding-y);
   @include declaration('flex-grow', 1);
 
   @include block-generation($modal-content--selector);
+}
+
+$modal-contentinner--selector: selector--set-element($modal--selector, 'content-inner');
+@include selector($modal-contentinner--selector) {
+  @include declaration('padding-top', $modals-content--padding-y);
+  @include declaration('padding-bottom', $modals-content--padding-y);
+
+  @include block-generation($modal-contentinner--selector);
 }
 
 
